# konfig

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml
http-requests/: request.http
migrations/: 001_create_settings.sql  002_add_user_tracking.sql  003_add_audit_log.sql
src/: auth.rs  config.rs  error.rs  lib.rs  main.rs  routes.rs  state.rs
src/db/: mod.rs  revisions.rs  search.rs  settings.rs
src/handlers/: mod.rs  revisions.rs  search.rs  settings.rs
src/models/: mod.rs  revision.rs  search.rs  setting.rs
tests/: api_test.rs
