[package]
name = "konfig"
version = "0.1.0"
edition = "2021"

[dependencies]
axum              = { version = "0.7", features = ["macros"] }
tokio             = { version = "1", features = ["full"] }
serde             = { version = "1", features = ["derive"] }
serde_json        = "1"
sqlx              = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono", "json"] }
uuid              = { version = "1", features = ["v4", "serde"] }
chrono            = { version = "0.4", features = ["serde"] }
tracing           = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror         = "1"
anyhow            = "1"
validator         = { version = "0.18", features = ["derive"] }
config            = "0.14"
dotenvy           = "0.15"
tower-http        = { version = "0.5", features = ["cors", "trace"] }

[dev-dependencies]
tokio             = { version = "1", features = ["full"] }
tower             = { version = "0.4", features = ["util"] }
http-body-util    = "0.1"